--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,28 @@
     max-width: 200px;
     margin: 1% auto;
   }
+footer {
+  width: 100%;
+  background-color: #5E4485;
+  padding: 3%;
+  color: white;
+}
+
+.fa {
+  padding: 15px;
+  font-size: 25px;
+  color: white;
+}
+.fa:hover {
+  color: #D5D5D5;
+  text-decoration: none;
+}
+@media (max-width: 900px) {
+  .fa {
+    font-size: 20px;
+    padding: 10px;
+  }
+}
 @media (max-width: 600px) {
   .carousel-caption {
     display: none;
@@ -49,9 +71,3 @@
   }
 
 }
-
-
-
-
-
-54:05
